# PPOIS

sem1/lab1/: fraction.cpp  fraction.h  fraction_test.cpp  main.cpp  sign.cpp  sign.h
sem1/lab2/aviacompany/: Aircraft.cpp  Aircraft.h  Client.cpp  Client.h  Company.cpp  Company.h  CustomerServiceDepartment.cpp  CustomerServiceDepartment.h  Department.h  Employee.cpp  FinanceDepartment.cpp  FinanceDepartment.h  ItDepartment.cpp  ItDepartment.h  LogisticsDepartment.cpp  LogisticsDepartment.h  MarketingDepartment.cpp  MarketingDepartment.h  Order.cpp  Order.h  Plane.cpp  Plane.h  SecurityDepartment.cpp  SecurityDepartment.h  TechnicalDepartment.cpp  TechnicalDepartment.h  main.cpp
sem1/lab4/: AdjacentVertexIter.h  DirectedGraph.h  EdgeIter.h  IncidentEdgeIter.h  VertexIter.h  main.cpp
sem2/: .gitignore
sem2/lab1/: Readme.md  advertisement.py  attraction.py  buyer.py  cart.py  cli.py  main.py  marketplace.py  marketplace_state.json  persistence.py  product.py  readme.md  stand.py  trader.py  utils.py
sem2/lab2/: pyproject.toml  requirements.txt
sem2/lab2/controllers/: player_controller.py
sem2/lab2/data/: players_example.xml
sem2/lab2/src/: app.py
sem2/lab2/src/controllers/: player_controller.py
sem2/lab2/src/exceptions/: exceptions.py
sem2/lab2/src/models/: player.py
sem2/lab2/src/repositories/: database_repository.py
sem2/lab2/src/services/: xml_handler.py
sem2/lab2/src/views/: add_player_window.py  delete_window.py  main_window.py  search_window.py  table_window.py
sem2/lab2/tests/: test_player_model.py  test_repository.py
(+111 files in other folders)
