[project]
name = "lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build==1.2.2.post1",
    "click==8.1.8",
    "coverage==7.6.12",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pip-tools==7.4.1",
    "pluggy==1.5.0",
    "pyproject-hooks==1.2.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.16",
    "pyqt5-sip==12.17.0",
    "pyqt5-stubs==5.15.6.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-env==1.1.5",
    "pytest-qt==4.4.0",
    "setuptools==75.8.0",
    "wheel==0.45.1",
]
